fixed strange behaviour on scrollbar

--- a/src/app/search-bar/search-bar.component.scss
+++ b/src/app/search-bar/search-bar.component.scss
@@ -115,6 +115,9 @@ hr {
 
 #advanced-search-filter-output-scrollable-container {
   width: 100%;
+  height: 6rem;
+  min-height: 6rem;
+  max-height: 6rem;
   overflow-y: auto;
 }
 
@@ -122,13 +125,8 @@ hr {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 6rem;
-  min-height: 6rem;
-  max-height: 6rem;
   padding: 0.5rem;
   gap: 0;
-  align-items: flex-start;
-  justify-content: left;
 }
 
 /* Scrollbar hiding */
@@ -742,6 +740,12 @@ input:focus {
   font-size: 1rem;
   width: 1rem;
   height: 1rem;
+}
+
+
+#get-properties-div {
+  visibility: hidden;
+  background-color: $copsi-blue;
 }
 
 /* Responsiveness */
